add preference to disable fab